--- a/caa-experimentation-lib/pom.xml
+++ b/caa-experimentation-lib/pom.xml
@@ -80,4 +80,12 @@
         </plugins>
     </reporting>
 
+    <distributionManagement>
+        <repository>
+        <id>github</id>
+        <name>GitHub Packages</name>
+        <url>https://maven.pkg.github.com/mtanevski/caa-experimentation-lib</url>
+        </repository>
+    </distributionManagement>
+
 </project>
