--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         java-version: '11'
         distribution: 'adopt'
+        javafx: true
     - name: Build with Maven
       run: mvn -B package -DskipTests --file pom.xml
     - name: Publish package
