--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,12 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
+    - name: Set up JDK 8
+      uses: actions/setup-java@v1
       with:
-        java-version: '11'
-        distribution: 'adopt'
-        javafx: true
+        java-version: '1.8'
+        java-package: jdk+fx
     - name: Build with Maven
       run: mvn -B package -DskipTests --file pom.xml
     - name: Publish package
