--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,3 +23,7 @@ jobs:
         java-package: jdk+fx
     - name: Build with Maven
       run: mvn -B package -DskipTests --file pom.xml
+    - name: Publish package
+      run: mvn --batch-mode deploy
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
