Skip deploy for console and parent

--- a/caa-experimentation-console/pom.xml
+++ b/caa-experimentation-console/pom.xml
@@ -10,6 +10,10 @@
         <version>0.0.1</version>
     </parent>
 
+    <properties>
+      <maven.deploy.skip>true</maven.deploy.skip>
+    </properties>
+
     <artifactId>caa-experimentation-console</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
