--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -21,8 +21,17 @@ jobs:
         java-package: jdk+fx
     - name: Build with Maven
       run: mvn -B package -DskipTests --file pom.xml
-    - name: Publish package
-      run: mvn deploy --settings settings.xml -DskipTests
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Set up JDK 8
+      uses: actions/setup-java@v1
+      with:
+        java-version: '1.8'
+        java-package: jdk+fx
+    - name: Deploy to Github Package Registry
       env:
-        USERNAME: ${{ github.actor }}
-        PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: mvn -DskipTests --settings settings.xml --file pom.xml deploy
