--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -30,8 +30,7 @@ jobs:
       with:
         java-version: '1.8'
         java-package: jdk+fx
-    - name: Deploy to Github Package Registry
+    - name: Publish package
+      run: mvn --batch-mode deploy
       env:
-        GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: mvn -DskipTests --settings settings.xml --file pom.xml deploy
