--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,6 +31,7 @@ jobs:
         java-version: '1.8'
         java-package: jdk+fx
     - name: Publish package
-      run: mvn -B -Dmaven.wagon.httpconnectionManager.ttlSeconds=25 -DskipTests deploy
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+        mkdir -B -DskipTests -p ~/.m2
+        echo "<settings><servers><server><id>github</id><username>marjan3</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
+        mvn deploy -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/marjan3/caa-experimentation
