--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -32,6 +32,6 @@ jobs:
         java-package: jdk+fx
     - name: Publish package
       run: |
-        mkdir -B -DskipTests -p ~/.m2
+        mkdir -p ~/.m2
         echo "<settings><servers><server><id>github</id><username>marjan3</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
-        mvn deploy -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/marjan3/caa-experimentation
+        mvn deploy -B -DskipTests -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/marjan3/caa-experimentation
