--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,4 +31,7 @@ jobs:
         java-version: '1.8'
         java-package: jdk+fx
     - name: Publish package
-      run: mvn -B --settings settings.xml deploy -B -DskipTests -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/marjan3/caa-experimentation
+      run: |
+        mkdir -p ~/.m2
+        echo "<settings><servers><server><id>github</id><username>marjan3</username><password>${GITHUB_TOKEN}</password></server></servers></settings>" > ~/.m2/settings.xml
+        mvn deploy -B -DskipTests -DaltDeploymentRepository=github::default::https://maven.pkg.github.com/marjan3/caa-experimentation
